samples/_failures_safe/1761637716_438d9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15d75c5b.c: In function ‘main’:
./samples/SAFE/__tmp_15d75c5b.c:135:5: error: expected ‘{’ at end of input
  135 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_15d75c5b.c:135:5: error: expected declaration or statement at end of input
